<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:color="#ffff">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="221dp"
        app:srcCompat="@drawable/google"
        android:contentDescription="@string/sign"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="center"
        android:text="@string/please"
        android:textColor="@color/lightblack"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/username"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/lightblack"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:gravity="bottom"/>

    <EditText
        android:hint = "@string/label1"
        android:id="@+id/Edittext1"
        android:layout_width="347dp"
        android:layout_height="68dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/edittext_border"
        android:inputType="textPersonName"
        android:textColor="@color/lightblack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginBottom="0dp"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/lightblack"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:gravity="bottom"/>


    <EditText
        android:hint="@string/label2"
        android:id="@+id/Edittext2"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/edittext_border"
        android:inputType="textPassword"
        android:textColor="@color/lightblack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/checkbox"
         android:text="@string/keep"
         android:layout_gravity="center"
         android:textColor="@color/lightblack"
         android:textStyle="bold"
         android:textSize="15sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:text="@string/sign"
        android:textColor="#ffff"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:background="@drawable/button_border"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:text="@string/create"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold"/>


</LinearLayout>